--- a/style.css
+++ b/style.css
@@ -12,16 +12,6 @@ body {
   font-family: "Quicksand", sans-serif;
 }
 
-.app,
-.heading,
-.food-items,
-.timer-row,
-.food-name,
-.food-timer,
-.add-item-section {
-  /* border: 1px solid; */
-}
-
 .app {
   border: 1px solid;
   border-color: black;
@@ -42,8 +32,8 @@ body {
   border-color: violet;
   width: 100%;
   height: 75%;
-  display: grid;
-  grid-template-rows: repeat(auto, 1fr);
+  display: flex;
+  flex-direction: column;
   overflow-y: scroll;
   font-size: 2rem;
 }
