--- a/style.css
+++ b/style.css
@@ -11,7 +11,12 @@ body {
   justify-content: center;
   font-family: "Quicksand", sans-serif;
 }
-
+p {
+  margin: 0;
+}
+.hidden {
+  display: none !important;
+}
 .app {
   border: 1px solid;
   border-color: black;
@@ -23,13 +28,13 @@ body {
   /* justify-content: flex-start; */
 }
 .heading {
-  border-color: violet;
+  /* border-color: violet; */
   width: 100%;
   height: 10%;
   text-align: center;
 }
 .food-items {
-  border-color: violet;
+  /* border-color: violet; */
   width: 100%;
   height: 75%;
   display: flex;
@@ -38,37 +43,50 @@ body {
   font-size: 2rem;
 }
 .timer-row {
-  border: 1px solid;
-  height: 5rem;
+  margin-top: 0.5rem;
+  border: 1px solid grey;
+  height: 6rem;
 
-  border-color: indigo;
-  display: grid;
-  grid-template-columns: 50% 40% 10%;
-  padding: 0.4rem;
+  /* border-color: indigo; */
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
 }
 .food-name {
-  border-color: blue;
+  width: 50%;
+  /* border-color: blue; */
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   padding-left: 0.5rem;
 }
 .food-timer {
+  width: 40%;
   /* border: 1px solid; */
   border-color: green;
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center; */
+  /* align-items: center; */
 }
 .start-btn {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   color: green;
   cursor: pointer;
 }
+
+.progress-bar {
+  width: 0px;
+  height: 20px;
+  background-color: blue;
+  align-self: flex-start;
+  justify-self: flex-start;
+}
+
 .add-item-section {
   border-color: rgb(168, 151, 0);
   width: 100%;
