--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@ p {
   border: 1px solid;
   border-color: black;
   width: 500px;
-  height: 800px;
+  height: 700px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: flex-start; */
+  justify-content: flex-start;
 }
 .heading {
   /* border-color: violet; */
@@ -36,7 +36,7 @@ p {
 .food-items {
   /* border-color: violet; */
   width: 100%;
-  height: 75%;
+  height: 50%;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
@@ -82,24 +82,47 @@ p {
 .progress-bar {
   width: 0px;
   height: 20px;
+  display: flex;
   background-color: blue;
   align-self: flex-start;
   justify-self: flex-start;
-}
 
+  justify-content: center;
+}
+.food-ready {
+  background-color: dimgray;
+  color: #fff;
+}
+.ready-message {
+  font-size: 0.8rem;
+  color: #fff;
+}
 .add-item-section {
-  border-color: rgb(168, 151, 0);
+  border: 1px solid black;
   width: 100%;
-  height: 15%;
+  height: 40%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
-.add-btn {
-  font-size: 5rem;
-  cursor: pointer;
+.heading2 {
+  text-align: center;
 }
-.add-btn:hover {
-  color: grey;
+.form {
+  padding-left: 2rem;
+  padding-right: 2rem;
+  display: grid;
+  grid-template-columns: 30% 70%;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 10px;
+}
+.form-input {
+  height: 1.3rem;
+  font-family: "Quicksand", sans-serif;
+  color: gray;
+}
+.submit-btn {
+  grid-column: 1 / span 2;
+  width: 60%;
+  justify-self: center;
 }
