--- a/style.css
+++ b/style.css
@@ -126,3 +126,48 @@ p {
   width: 60%;
   justify-self: center;
 }
+
+@media all and (max-width: 480px) {
+  .app {
+    border: 1px solid;
+    border-color: black;
+    width: 99vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .timer-row {
+    height: 4rem;
+
+    /* border-color: indigo; */
+  }
+  .form {
+    font-size: 14px;
+  }
+  .food-items {
+    font-size: 18px;
+  }
+  .form {
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+    display: grid;
+    grid-template-columns: 25% 65%;
+    grid-template-rows: repeat(4, 1fr);
+    gap: 5px;
+  }
+  .form-input {
+    height: 1rem;
+    font-family: "Quicksand", sans-serif;
+    color: gray;
+  }
+  .add-item-section {
+    border: 1px solid black;
+    width: 100%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+  }
+}
