--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   font-family: "Quicksand", sans-serif;
 
-  font-size: calc(16px + (32 - 16) * ((100vw - 320px) / (1600 - 320)));
+  font-size: calc(16px + (24 - 16) * ((100vw - 320px) / (2000 - 320)));
 }
 p {
   margin: 0;
@@ -23,7 +23,7 @@ p {
   border: 1px solid;
   border-color: black;
   width: 500px;
-  height: 700px;
+  height: 95vh;
   display: flex;
   flex-direction: column;
   align-items: center;
